samples/_failures_safe/1761220436_ee3396_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6ebcb328.c: In function ‘main’:
./samples/SAFE/__tmp_6ebcb328.c:179:5: error: expected expression at end of input
  179 |     for (size_t i = 0; i < tokens->count;
      |     ^~~
./samples/SAFE/__tmp_6ebcb328.c:179:5: error: expected declaration or statement at end of input
